--- a/transaction.links.task.yml
+++ b/transaction.links.task.yml
@@ -4,11 +4,23 @@ transaction.transaction_type_collection:
   base_route: entity.transaction_type.collection
   weight: 0
 
+entity.transaction_type.edit_form:
+  route_name: entity.transaction_type.edit_form
+  title: 'Edit'
+  base_route: entity.transaction_type.edit_form
+  weight: 0
+
+entity.transaction_type.operation_collection:
+  route_name: entity.transaction_operation.collection
+  title: 'Operations'
+  base_route: entity.transaction_type.edit_form
+  weight: 10
+
 transaction.settings_form:
   route_name: transaction.settings_form
   title: 'Settings'
   base_route: entity.transaction_type.collection
-  weight: 10
+  weight: 20
 
 entity.transaction.canonical:
   title: 'View'
