The type of the target entity field in transaction is now dynamic_entity_reference.
Introduces depencency on the dynamic entity reference module. Core
entity_reference field type admits only references to one entity
type. A BaseFieldOverride overrides the target_type for specific
bundles but it doesn't work since just overrides FieldConfig settings,
not the field storage ones.

There is work in progress to support dynamic entity references in
Core, see https://www.drupal.org/project/drupal/issues/2407587

--- a/transaction.info.yml
+++ b/transaction.info.yml
@@ -4,3 +4,5 @@ description: 'Transactional operations over entities.'
 package: Other
 configure: entity.transaction_type.collection
 core: 8.x
+dependencies:
+ - dynamic_entity_reference:dynamic_entity_reference (=8.x-1.x)
