--- a/transaction.info.yml
+++ b/transaction.info.yml
@@ -5,4 +5,4 @@ package: Other
 configure: entity.transaction_type.collection
 core: 8.x
 dependencies:
- - dynamic_entity_reference:dynamic_entity_reference (=8.x-1.x)
+ - dynamic_entity_reference:dynamic_entity_reference
