Get last executed transaction moved from the transactor handler to the new transaction service

--- a/transaction.services.yml
+++ b/transaction.services.yml
@@ -1,4 +1,8 @@
 services:
+  transaction:
+    class: Drupal\transaction\TransactionService
+    arguments: ['@entity_type.manager']
+
   plugin.manager.transaction.transactor:
     class: Drupal\transaction\TransactorPluginManager
     arguments: ['@container.namespaces', '@cache.discovery', '@module_handler']
