--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     "drupal/dynamic_entity_reference": "^1.0"
   },
   "suggest": {
+    "drupal/token": "Provides additional tokens not supported by core (most notably fields), as well as a UI for browsing tokens.",
     "drupal/userpoints": "Provides a point system for users, letting to gain or lose points for performing certain actions on your site.",
     "drupal/transaction_workflow": "Light weight multipurpose workflow manager for any entity type."
   }
