--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,9 @@
     "drupal/core": "^8",
     "drupal/dynamic_entity_reference": "^1.0"
   },
+  "require-dev": {
+    "drupal/token": "^1.6"
+  },
   "suggest": {
     "drupal/token": "Provides additional tokens not supported by core (most notably fields), as well as a UI for browsing tokens.",
     "drupal/userpoints": "Provides a point system for users, letting to gain or lose points for performing certain actions on your site.",
