--- a/transaction.info.yml
+++ b/transaction.info.yml
@@ -4,8 +4,9 @@ description: 'Transactional operations over entities.'
 package: Workflow
 configure: entity.transaction_type.collection
 core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
- - dynamic_entity_reference:dynamic_entity_reference
+  - dynamic_entity_reference:dynamic_entity_reference
 test_dependencies:
   - drupal:field_ui
   - token:token
