Issue #3256256 by jamesgrobertson: "context" key in transaction.rules.events.yml should be "context_definitions"

--- a/transaction.rules.events.yml
+++ b/transaction.rules.events.yml
@@ -1,7 +1,7 @@
 rules_transaction_execution:
   label: 'Transaction has been executed'
   category: 'Transaction'
-  context:
+  context_definitions:
     transaction:
       type: 'entity:transaction'
       label: 'The executed transaction'
