--- a/modules/transaction_ief/transaction_ief.info.yml
+++ b/modules/transaction_ief/transaction_ief.info.yml
@@ -2,8 +2,7 @@ name: 'Transaction inline entity form'
 type: module
 description: 'Integration between transaction and inline entity form modules. Provides a widget to create new transactions from the target entity form.'
 package: Workflow
-core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 dependencies:
   - transaction:transaction
   - inline_entity_form:inline_entity_form
